Revert "iphone overflow fix attempt"
This reverts commit d4dfe2ef

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 body {
   margin: 0;
   padding: 0;
+  //font-family: 'Barlow Semi Condensed', sans-serif;
   font-family: Helvetica, sans-serif;
   box-sizing: border-box;
 }
@@ -11,5 +12,5 @@ body {
 html {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow: hidden;
 }
